<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:paddingLeft="100dp"
    android:paddingRight="100dp"
    android:paddingTop="150dp"
    android:paddingBottom="150dp"
    android:background="#FFF">
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            
            <LinearLayout 
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal"
	            android:layout_gravity="center_vertical">
	            
	            <TextView 
	            	android:layout_height="wrap_content"
	            	android:text="@string/reservation_add_username_text"
	            	style="@style/reservation_add_label"
	            	android:layout_gravity="center_vertical"/>
	            <EditText 
	                android:id="@+id/reservation_add_username"
	                style="@style/reservation_add_edittext"
	                android:background="@drawable/edittext_border"
	                android:layout_gravity="center_vertical"/>
	            <TextView 
	            	android:layout_width="0dp"
	            	android:layout_weight="1"
	            	android:layout_height="wrap_content"
	            	android:text="@string/reservation_add_username_hint"
	            	style="@style/reservation_add_hint"
	            	android:layout_gravity="center_vertical"/>
	            
        	</LinearLayout>
            
        </LinearLayout>
        
        
       <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            
            <LinearLayout 
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal"
	            android:layout_gravity="center_vertical">
            
	            <TextView 
	            	android:layout_height="wrap_content"
	            	android:text="@string/reservation_add_identity_card_text"
	            	style="@style/reservation_add_label"
	            	android:layout_gravity="center_vertical"/>
	            <EditText 
	                android:id="@+id/reservation_add_identity_card"
	               	style="@style/reservation_add_edittext"
	                android:background="@drawable/edittext_border"
	                android:layout_gravity="center_vertical"/>
	            <TextView 
	            	android:layout_width="0dp"
	            	android:layout_weight="1"
	            	android:layout_height="wrap_content"
	            	android:text="@string/reservation_add_identity_card_hint"
	            	style="@style/reservation_add_hint"
	            	android:layout_gravity="center_vertical"/>
	            
            </LinearLayout>
            
        </LinearLayout>
        
         <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            
            <LinearLayout 
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal"
	            android:layout_gravity="center_vertical">
	            
	            <TextView 
	            	android:layout_height="wrap_content"
	            	android:text="@string/reservation_add_mobile_text"
	            	style="@style/reservation_add_label"
	            	android:layout_gravity="center_vertical"/>
	            <EditText 
	                android:id="@+id/reservation_add_mobile"
	              	style="@style/reservation_add_edittext"
	                android:background="@drawable/edittext_border"
	                android:layout_gravity="center_vertical"/>
	            <TextView 
	            	android:layout_width="0dp"
	            	android:layout_weight="1"
	            	android:layout_height="wrap_content"
	            	android:text="@string/reservation_add_mobile_hint"
	            	style="@style/reservation_add_hint"
	            	android:layout_gravity="center_vertical"/>
            
            </LinearLayout>
            
        </LinearLayout>
        
         <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            
            <LinearLayout 
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal"
	            android:layout_gravity="center_vertical">
            
	            <TextView 
	            	android:layout_height="wrap_content"
	            	android:text="@string/reservation_add_family_mobile_text"
	            	style="@style/reservation_add_label"
	            	android:layout_gravity="center_vertical"/>
	            <EditText 
	                android:id="@+id/reservation_add_family_mobile"
	               	style="@style/reservation_add_edittext"
	                android:background="@drawable/edittext_border"
	                android:layout_gravity="center_vertical"/>
	            <TextView 
	            	android:layout_width="0dp"
	            	android:layout_weight="1"
	            	android:layout_height="wrap_content"
	            	android:text="@string/reservation_add_family_mobile_hint"
	            	style="@style/reservation_add_hint"
	            	android:layout_gravity="center_vertical"/>
	            
            </LinearLayout>
            
        </LinearLayout>
        
          <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            
            <LinearLayout 
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal"
	            android:layout_gravity="center_vertical">
            
	            <TextView 
	            	android:layout_height="wrap_content"
	            	android:text="@string/reservation_add_type_text"
	            	android:layout_gravity="center_vertical"
	            	style="@style/reservation_add_label"/>
	            
	            <RadioGroup 
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:orientation="horizontal"
	                android:layout_gravity="center_vertical">
	                
	                <RadioButton 
	                    android:id="@+id/reservation_add_type_case"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:checked="true"
	                    android:text="@string/reservation_add_type_case_text"/>
	                <RadioButton 
	                    android:id="@+id/reservation_add_type_contrast"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:text="@string/reservation_add_type_contrast_text"
	                    android:layout_marginLeft="15dp"/>
	                
	            </RadioGroup>
            
            </LinearLayout>
            
        </LinearLayout>
        
         <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            
            <LinearLayout 
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal"
	            android:layout_gravity="center_vertical">
            
	            <TextView 
	            	android:layout_height="wrap_content"
	            	android:text="@string/reservation_add_book_date_text"
	            	android:layout_gravity="center_vertical"
	            	style="@style/reservation_add_label"/>
	            
	            <EditText 
	                android:id="@+id/reservation_add_book_date_et"
	                style="@style/reservation_add_edittext"
	                android:background="@drawable/edittext_border"
	                android:layout_gravity="center_vertical"
	                android:editable="false"/>
	            
	            <ImageButton 
	                android:id="@+id/reservation_add_select_date_btn"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_marginLeft="15dp"
	                android:src="@drawable/reservation_date"
	                android:background="#00000000"
	                android:layout_gravity="center_vertical"/>
	            
            </LinearLayout>
            
        </LinearLayout>
        
         <RelativeLayout 
            android:layout_width="match_parent"
            android:layout_height="200dp">
            
           <Button 
               android:id="@+id/reservation_add_submit"
               android:layout_width="350dp"
               android:layout_height="wrap_content"
               android:layout_centerInParent="true"
               android:text="@string/reservation_add_submit_text"
               android:background="#0096DC"
               android:textColor="#FFFFFF"
               android:textSize="25sp"/>
            
            
        </RelativeLayout>
        
    </LinearLayout>
    
</LinearLayout>
