<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF">
    
    
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">
        
        
        <!-- 第一行 -->
        <LinearLayout 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            
            <!-- 预约管理   -->
            <LinearLayout 
                android:id="@+id/ll_index_reservation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                
                 <ImageView 
            	    android:layout_width="wrap_content"
            	    android:layout_height="wrap_content"
            	    android:layout_gravity="center_horizontal"
            	    android:src="@drawable/index_reservation"/>
                    
                	<TextView 
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:layout_gravity="center_horizontal"
	                    android:text="@string/index_reservation"
	                    android:textSize="@dimen/index_title_text_size"/>
                
            </LinearLayout>
            
            <!-- 开始访谈   -->
            <LinearLayout 
                android:id="@+id/ll_index_interview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                style="@style/index_module_margin">
                
                 <ImageView 
            	    android:layout_width="wrap_content"
            	    android:layout_height="wrap_content"
            	    android:layout_gravity="center_horizontal"
            	    android:src="@drawable/index_interview"/>
                    
               	<TextView 
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/index_interview"
                    android:textSize="@dimen/index_title_text_size"/>
                
            </LinearLayout>
            
            <!-- 受访者查询   -->
            <LinearLayout 
                android:id="@+id/ll_index_interviewee_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                style="@style/index_module_margin">
                
                 <ImageView 
            	    android:layout_width="wrap_content"
            	    android:layout_height="wrap_content"
            	    android:layout_gravity="center_horizontal"
            	    android:src="@drawable/index_search"/>
                    
               	<TextView 
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/index_search"
                    android:textSize="@dimen/index_title_text_size"/>
                
            </LinearLayout>
            
            <!-- 个人中心   -->
            <LinearLayout 
                android:id="@+id/ll_index_usercenter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                style="@style/index_module_margin">
                
                 <ImageView 
            	    android:layout_width="wrap_content"
            	    android:layout_height="wrap_content"
            	    android:layout_gravity="center_horizontal"
            	    android:src="@drawable/index_usercenter"/>
                    
               	<TextView 
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/index_usercenter"
                    android:textSize="@dimen/index_title_text_size"/>
                
            </LinearLayout>
            
        </LinearLayout>
        
        
        <!-- 第二行 -->
        <LinearLayout 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:orientation="horizontal">
            
            
            <!-- 数据统计   -->
            <LinearLayout 
                android:id="@+id/ll_index_statics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                
                 <ImageView 
            	    android:layout_width="wrap_content"
            	    android:layout_height="wrap_content"
            	    android:layout_gravity="center_horizontal"
            	    android:src="@drawable/index_statics"/>
                    
                	<TextView 
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:layout_gravity="center_horizontal"
	                    android:text="@string/index_statics"
	                    android:textSize="@dimen/index_title_text_size"/>
                
            </LinearLayout>
            
            <!-- 数据上传   -->
            <LinearLayout 
                android:id="@+id/ll_index_data_upload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                style="@style/index_module_margin">
                
                 <ImageView 
            	    android:layout_width="wrap_content"
            	    android:layout_height="wrap_content"
            	    android:layout_gravity="center_horizontal"
            	    android:src="@drawable/index_upload"/>
                    
               	<TextView 
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/index_upload"
                    android:textSize="@dimen/index_title_text_size"/>
                
            </LinearLayout>
            
            <!-- 系统更新   -->
            <LinearLayout 
                android:id="@+id/ll_index_system_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                style="@style/index_module_margin">
                
                 <ImageView 
            	    android:layout_width="wrap_content"
            	    android:layout_height="wrap_content"
            	    android:layout_gravity="center_horizontal"
            	    android:src="@drawable/index_update"/>
                    
               	<TextView 
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/index_update"
                    android:textSize="@dimen/index_title_text_size"/>
                
            </LinearLayout>
            
            <!-- 帮助  -->
            <LinearLayout 
                android:id="@+id/ll_index_help"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                style="@style/index_module_margin">
                
                 <ImageView 
            	    android:layout_width="wrap_content"
            	    android:layout_height="wrap_content"
            	    android:layout_gravity="center_horizontal"
            	    android:src="@drawable/index_help"/>
                    
               	<TextView 
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/index_help"
                    android:textSize="@dimen/index_title_text_size"/>
                
            </LinearLayout>
            
            
        </LinearLayout>
        
        
    </LinearLayout>
    
    
</RelativeLayout>
